--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<h1>Slasho</h1>
 		<button type="button" class="play-normal-btn">PLAY GAME</button>
 		<button type="button" class="play-casual-btn">CASUAL MODE</button>
-		<div class="credits">An 8kB game by <a href="#">Num Codes </a></div>
+		<div class="credits">An 8kB game by <a href="https://github.com/numcodes">Num Codes </a></div>
 	</div>
 	<div class="menu menu--pause">
 		<h1>Paused</h1>
